--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <div class="font">123</div>
+  <div class="font">正在加载字体...</div>
   <p class="web-font">2月7日，龙岗镇组织全镇党员干部</p>
   <p>正常字体正常字体正常字体正常字体正常字体正常字体正常字体正常字体正常字体正常字体正常字体正常字体正常字体正常字体正常字体正常字体</p>
   <script>
